<?xml version="1.0"?>
<package>
  <name>py_tests</name>
  <version>0.0.0</version>
  <description>Python tests for performance.</description>

  <maintainer email="kshehata@clearpathrobotics.com">Kareem Shehata</maintainer>
  <author>Kareem Shehata</author>

  <license>Clearpath Proprietary</license>

  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
